# rubikcube-1014-1829

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: experiment.rs  main.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: main.ts
