[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.18", features = ["auto-initialize"] }

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "experiment"
path = "src/experiment.rs"
